#3 app icon recreated

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <meta http-equiv="Pragma" content="cache" />
     <meta name="robots" content="INDEX,FOLLOW" />
     <meta http-equiv="content-Language" content="en" />
-    <meta name="description" content="Master the NATO phonetic alphabet with our interactive online tool. Learn to spell clearly and avoid miscommunication in any situation, from aviation to everyday conversations. Start learning Alpha, Bravo, Charlie today!"    />
-    <meta name="keywords" content="NATO phonetic alphabet, phonetic alphabet, military alphabet, spelling alphabet, radio alphabet, learn phonetic alphabet, NATO alphabet words, Alpha Bravo Charlie, communication skills, aviation alphabet, pilot alphabet, emergency communication, pronunciat"
+    <meta
+      name="description"
+      content="Master the NATO phonetic alphabet with our interactive online tool. Learn to spell clearly and avoid miscommunication in any situation, from aviation to everyday conversations. Start learning Alpha, Bravo, Charlie today!"
+    />
+    <meta
+      name="keywords"
+      content="NATO phonetic alphabet, phonetic alphabet, military alphabet, spelling alphabet, radio alphabet, learn phonetic alphabet, NATO alphabet words, Alpha Bravo Charlie, communication skills, aviation alphabet, pilot alphabet, emergency communication, pronunciat"
     />
     <meta name="author" content="Raphael Holzer" />
     <meta name="copyright" content="Raphael Holzer" />
